--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>André Martins</title>
+  <link rel="stylesheet" href="assets/bundle.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-  
+  <div id="root"></div>
+  <script src="assets/bundle.js"></script>
 </body>
 </html>
