deploy: 7c8e71521c47b5e4d5de0ef9a621629349ab0ede

--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>André Martins</title>
-  <link rel="stylesheet" href="assets/bundle.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-</head>
-<body>
-  <div id="root"></div>
-  <script src="assets/bundle.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>André Martins</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="assets/bundle.js"></script><link href="assets/bundle.css" rel="stylesheet"></head><body><header id="page-header"><div><a href="/"><img id="page-logo" src="1670b842da911b840406.svg"/></a></div><nav id="navbar"><ul id="navbar-ul"><li><a href="/">Home</a></li><li><a href="/#about">About</a></li><li><a href="/#contact">Contact</a></li></ul></nav></header><main><p>Comming soon...</p></main></body></html>
